v0.0.1/modules/schema/pages/class/Charge.adoc
= `Charge`
:toclevels: 4


+++A charge element associated with other entities such as tariff structures, auxiliary agreements or other charge elements. The total charge amount applicable to this instance of charge is the sum of fixed and variable portion.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Charge`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`Charge`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
Charge {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



AccountingUnit {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}





Charge {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Charge {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



TimeTariffInterval {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ConsumptionTariffInterval {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



AuxiliaryAccount {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




Charge -> AccountingUnit: fixedPortion



Charge -> Charge: ChildCharges


Charge -> Charge: ParentCharge


Charge -> TimeTariffInterval: TimeTariffIntervals


Charge -> ConsumptionTariffInterval: ConsumptionTariffIntervals


Charge -> AuxiliaryAccount: AuxiliaryAccounts


Charge -> DiagramObject: DiagramObjects


Charge -> InstanceSet: InstanceSet


Charge -> Name: Names


Charge -> ChangeSetMember: PropertiesCIMDataObject


Charge -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<ParentCharge,`ParentCharge`>>
| 0..1
| xref::class/Charge.adoc[`Charge`]
| +++Parent of this charge sub-component.+++

| <<fixedPortion,`fixedPortion`>>
| 0..1
| xref::class/AccountingUnit.adoc[`AccountingUnit`]
| +++The fixed portion of this charge element.+++

| <<kind,`kind`>>
| 0..1
| xref::enumeration/ChargeKind.adoc[`ChargeKind`]
| +++The kind of charge to be applied.+++

| <<variablePortion,`variablePortion`>>
| 0..1
| xref::class/PerCent.adoc[`PerCent`]
| +++The variable portion of this charge element, calculated as a percentage of the total amount of a parent charge.+++

| <<AuxiliaryAccounts,`AuxiliaryAccounts`>>
| 0..*
| xref::class/AuxiliaryAccount.adoc[`AuxiliaryAccount`]
| +++All auxiliary accounts to which this charge has to be levied.+++

| <<ChildCharges,`ChildCharges`>>
| 0..*
| xref::class/Charge.adoc[`Charge`]
| +++All sub-components of this complex charge.+++

| <<ConsumptionTariffIntervals,`ConsumptionTariffIntervals`>>
| 0..*
| xref::class/ConsumptionTariffInterval.adoc[`ConsumptionTariffInterval`]
| +++Tariff intervals to which this consumption-based charge has to be levied.+++

| <<TimeTariffIntervals,`TimeTariffIntervals`>>
| 0..*
| xref::class/TimeTariffInterval.adoc[`TimeTariffInterval`]
| +++Tariff intervals to which this time-based charge has to be levied.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#AuxiliaryAccounts]
=== `AuxiliaryAccounts`
+++All auxiliary accounts to which this charge has to be levied.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Charge.AuxiliaryAccounts`
| Cardinality
| 0..*
| Type
| xref::class/AuxiliaryAccount.adoc[`AuxiliaryAccount`]


|===

//[discrete]
[#ChildCharges]
=== `ChildCharges`
+++All sub-components of this complex charge.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Charge.ChildCharges`
| Cardinality
| 0..*
| Type
| xref::class/Charge.adoc[`Charge`]


|===

//[discrete]
[#ConsumptionTariffIntervals]
=== `ConsumptionTariffIntervals`
+++Tariff intervals to which this consumption-based charge has to be levied.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Charge.ConsumptionTariffIntervals`
| Cardinality
| 0..*
| Type
| xref::class/ConsumptionTariffInterval.adoc[`ConsumptionTariffInterval`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#fixedPortion]
=== `fixedPortion`
+++The fixed portion of this charge element.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Charge.fixedPortion`
| Cardinality
| 0..1
| Type
| xref::class/AccountingUnit.adoc[`AccountingUnit`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#kind]
=== `kind`
+++The kind of charge to be applied.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Charge.kind`
| Cardinality
| 0..1
| Type
| xref::enumeration/ChargeKind.adoc[`ChargeKind`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ParentCharge]
=== `ParentCharge`
+++Parent of this charge sub-component.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Charge.ParentCharge`
| Cardinality
| 0..1
| Type
| xref::class/Charge.adoc[`Charge`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TimeTariffIntervals]
=== `TimeTariffIntervals`
+++Tariff intervals to which this time-based charge has to be levied.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Charge.TimeTariffIntervals`
| Cardinality
| 0..*
| Type
| xref::class/TimeTariffInterval.adoc[`TimeTariffInterval`]


|===

//[discrete]
[#variablePortion]
=== `variablePortion`
+++The variable portion of this charge element, calculated as a percentage of the total amount of a parent charge.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Charge.variablePortion`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]


|===


