v1.1.0/modules/schema/pages/class/Charge.adoc
= `Charge`
:toclevels: 4


+++A charge element associated with other entities such as tariff structures, auxiliary agreements or other charge elements. The total charge amount applicable to this instance of charge is the sum of fixed and variable portion.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Charge`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`Charge`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<AuxiliaryAccounts,`AuxiliaryAccounts`>>
//| [[slots_table.AuxiliaryAccounts]]<<AuxiliaryAccounts,`AuxiliaryAccounts`>>
| 0..* +
xref::class/AuxiliaryAccount.adoc[`AuxiliaryAccount`]
| +++All auxiliary accounts to which this charge has to be levied.+++
| _n/a_

| <<ChildCharges,`ChildCharges`>>
//| [[slots_table.ChildCharges]]<<ChildCharges,`ChildCharges`>>
| 0..* +
xref::class/Charge.adoc[`Charge`]
| +++All sub-components of this complex charge.+++
| _n/a_

| <<ConsumptionTariffIntervals,`ConsumptionTariffIntervals`>>
//| [[slots_table.ConsumptionTariffIntervals]]<<ConsumptionTariffIntervals,`ConsumptionTariffIntervals`>>
| 0..* +
xref::class/ConsumptionTariffInterval.adoc[`ConsumptionTariffInterval`]
| +++Tariff intervals to which this consumption-based charge has to be levied.+++
| _n/a_

| <<ParentCharge,`ParentCharge`>>
//| [[slots_table.ParentCharge]]<<ParentCharge,`ParentCharge`>>
| 0..1 +
xref::class/Charge.adoc[`Charge`]
| +++Parent of this charge sub-component.+++
| _n/a_

| <<TimeTariffIntervals,`TimeTariffIntervals`>>
//| [[slots_table.TimeTariffIntervals]]<<TimeTariffIntervals,`TimeTariffIntervals`>>
| 0..* +
xref::class/TimeTariffInterval.adoc[`TimeTariffInterval`]
| +++Tariff intervals to which this time-based charge has to be levied.+++
| _n/a_

| <<fixedPortion,`fixedPortion`>>
//| [[slots_table.fixedPortion]]<<fixedPortion,`fixedPortion`>>
| 0..1 +
xref::class/AccountingUnit.adoc[`AccountingUnit`]
| +++The fixed portion of this charge element.+++
| _n/a_

| <<kind,`kind`>>
//| [[slots_table.kind]]<<kind,`kind`>>
| 0..1 +
xref::enumeration/ChargeKind.adoc[`ChargeKind`]
| +++The kind of charge to be applied.+++
| _n/a_

| <<variablePortion,`variablePortion`>>
//| [[slots_table.variablePortion]]<<variablePortion,`variablePortion`>>
| 0..1 +
xref::class/PerCent.adoc[`PerCent`]
| +++The variable portion of this charge element, calculated as a percentage of the total amount of a parent charge.+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#AuxiliaryAccounts]
=== `AuxiliaryAccounts`
+++All auxiliary accounts to which this charge has to be levied.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Charge.AuxiliaryAccounts`
| Cardinality
| 0..*
| Type
| xref::class/AuxiliaryAccount.adoc[`AuxiliaryAccount`]


|===

////
[.text-left]
--
<<slots_table.AuxiliaryAccounts,&#10548;>>
--
////


//[discrete]
[#ChildCharges]
=== `ChildCharges`
+++All sub-components of this complex charge.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Charge.ChildCharges`
| Cardinality
| 0..*
| Type
| xref::class/Charge.adoc[`Charge`]


|===

////
[.text-left]
--
<<slots_table.ChildCharges,&#10548;>>
--
////


//[discrete]
[#ConsumptionTariffIntervals]
=== `ConsumptionTariffIntervals`
+++Tariff intervals to which this consumption-based charge has to be levied.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Charge.ConsumptionTariffIntervals`
| Cardinality
| 0..*
| Type
| xref::class/ConsumptionTariffInterval.adoc[`ConsumptionTariffInterval`]


|===

////
[.text-left]
--
<<slots_table.ConsumptionTariffIntervals,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#fixedPortion]
=== `fixedPortion`
+++The fixed portion of this charge element.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Charge.fixedPortion`
| Cardinality
| 0..1
| Type
| xref::class/AccountingUnit.adoc[`AccountingUnit`]


|===

////
[.text-left]
--
<<slots_table.fixedPortion,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#kind]
=== `kind`
+++The kind of charge to be applied.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Charge.kind`
| Cardinality
| 0..1
| Type
| xref::enumeration/ChargeKind.adoc[`ChargeKind`]


|===

////
[.text-left]
--
<<slots_table.kind,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#ParentCharge]
=== `ParentCharge`
+++Parent of this charge sub-component.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Charge.ParentCharge`
| Cardinality
| 0..1
| Type
| xref::class/Charge.adoc[`Charge`]


|===

////
[.text-left]
--
<<slots_table.ParentCharge,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TimeTariffIntervals]
=== `TimeTariffIntervals`
+++Tariff intervals to which this time-based charge has to be levied.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Charge.TimeTariffIntervals`
| Cardinality
| 0..*
| Type
| xref::class/TimeTariffInterval.adoc[`TimeTariffInterval`]


|===

////
[.text-left]
--
<<slots_table.TimeTariffIntervals,&#10548;>>
--
////


//[discrete]
[#variablePortion]
=== `variablePortion`
+++The variable portion of this charge element, calculated as a percentage of the total amount of a parent charge.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Charge.variablePortion`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]


|===

////
[.text-left]
--
<<slots_table.variablePortion,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/AuxiliaryAccount.adoc[`AuxiliaryAccount`] | xref::class/AuxiliaryAccount.adoc#Charges[`Charges`]



| xref::class/Charge.adoc[`Charge`] | xref::class/Charge.adoc#ParentCharge[`ParentCharge`]



| xref::class/ConsumptionTariffInterval.adoc[`ConsumptionTariffInterval`] | xref::class/ConsumptionTariffInterval.adoc#Charges[`Charges`]



| xref::class/TimeTariffInterval.adoc[`TimeTariffInterval`] | xref::class/TimeTariffInterval.adoc#Charges[`Charges`]


|===

